<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/roxo_escuro"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <!-- Adicione seus componentes para o Container 1 aqui -->
        <ImageView
            android:id="@+id/icon"
            android:layout_width="91dp"
            android:layout_height="89dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/icone_desc"
            android:src="@drawable/ic_deaft" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/aprender"
            android:textColor="@color/cor_titulo"
            android:textSize="@dimen/titulo_grande"
            android:textStyle="bold|italic" />

    </FrameLayout>

    <AutoCompleteTextView
        android:id="@+id/inputTextLearn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="56dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="56dp"
        android:hint="@string/digite_a_palavra_que_deseja_aprender"
        android:textColorHint="@color/cor_botao"
        android:textColor="@color/cor_botao"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputTextLearn"
        android:layout_marginTop="56dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_rounded"
        android:text="@string/vibrar"
        android:textAlignment="center"
        android:textColor="@color/cor_botao_texto" />



</RelativeLayout>