<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/roxo_escuro"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <!-- Adicione seus componentes para o Container 1 aqui -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/libras"
            android:textColor="@color/cor_titulo"
            android:textSize="@dimen/titulo_grande"
            android:textStyle="bold|italic" />

    </FrameLayout>

    <AutoCompleteTextView
        android:id="@+id/inputText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/container1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="56dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="56dp"
        android:hint="@string/digite_a_palavra_que_deseja_procurar"
        android:textColorHint="@color/cor_botao"
        android:textColor="@color/cor_botao"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/searchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputText"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_rounded"
        android:text="@string/procurar"
        android:textAlignment="center"
        android:textSize="@dimen/texto_botao"
        android:textColor="@color/cor_botao_texto" />

    <ImageView
        android:id="@+id/gifLibras"
        android:layout_width="315dp"
        android:layout_height="298dp"
        android:layout_below="@+id/searchBtn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/gif_da_palavra_em_libras"
        android:scaleType="fitCenter" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/container1"
        android:gravity="center"
        android:text="Digite uma palavra e Receba um Gif em Libras."
        android:textColor="@color/cor_botao"
        android:textSize="@dimen/texto_exp" />

</RelativeLayout>