<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/roxo_escuro"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/aprendizado"
            android:textColor="@color/cor_titulo"
            android:textSize="@dimen/titulo_grande"
            android:textStyle="bold|italic" />

    </FrameLayout>

    <Button
        android:id="@+id/btn_select_learn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_rounded"
        android:text="@string/aprender"
        android:textSize="@dimen/texto_botao"
        android:textColor="@color/cor_botao_texto" />

    <Button
        android:id="@+id/btn_select_recognize"
        android:layout_below="@id/btn_select_learn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:text="@string/reconhecer"
        android:textSize="@dimen/texto_botao"
        android:textColor="@color/cor_botao_texto" />




</RelativeLayout>