<!-- activity_menu.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/roxo_escuro"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <!-- Adicione seus componentes para o Container 1 aqui -->
        <ImageView
            android:id="@+id/icon"
            android:layout_width="91dp"
            android:layout_height="89dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/icone_desc"
            android:src="@drawable/ic_deaft" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:layout_marginEnd="18dp"
            android:text="@string/comunicacao"
            android:textColor="@color/cor_titulo"
            android:textSize="44sp"
            android:textStyle="bold|italic" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/btn_select_vibration"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginTop="189dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_rounded"
            android:layout_marginStart="32dp"
            android:text="@string/Traducao"
            android:textColor="@color/cor_botao_texto"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_select_dic_com"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/button_rounded"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/dic_comunidade"
            android:textColor="@color/cor_botao_texto"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.272"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/btn_select_vibration" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>

